--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@hono/node-server": "1.19.6",
     "@prisma/adapter-pg": "7.0.0",
     "@prisma/client": "7.0.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "17.2.3",
     "hono": "4.9.12",
     "logger": "^0.0.1",
@@ -18,6 +19,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/bun": "^1.3.5",
     "@types/node": "20.19.24",
     "@types/pg": "^8.15.6",
