--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@prisma/adapter-pg": "7.0.0",
     "@prisma/client": "7.0.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "dotenv": "17.2.3",
     "hono": "4.9.12",
     "jsonwebtoken": "^9.0.3",
